Small display issue fix for inputs on IE

--- a/assets/css/panel.css
+++ b/assets/css/panel.css
@@ -682,7 +682,8 @@ body.rtl .field-grid {
   -moz-appearance: none;
   -ms-appearance: none;
   appearance: none;
-  border-radius: 0; }
+  border-radius: 0;
+  min-height: 2.75em; }
 
 .input:-webkit-autofill {
   box-shadow: 0 0 0 1000px white inset !important; }
